--- a/index.html
+++ b/index.html
@@ -598,15 +598,15 @@ function showTempoResponseScreen(correctAnswer, callback, videoFile, trialNumber
       <h1 style="color: #4b2e83; margin-top: 10px;">How did the music sound?</h1>
       <div class="response-options">
         <button class="tempo-btn" data-choice="fast">
-          <img src="fast_icon.png" alt="Fast" class="option-icon" />
+          <img src="fast_icon.jpg" alt="Fast" class="option-icon" />
           <span>Fast</span>
         </button>
         <button class="tempo-btn" data-choice="slow">
-          <img src="slow_icon.png" alt="Slow" class="option-icon" />
+          <img src="slow_icon.jpg" alt="Slow" class="option-icon" />
           <span>Slow</span>
         </button>
         <button class="tempo-btn" data-choice="same">
-          <img src="same_icon.png" alt="Same" class="option-icon" />
+          <img src="same_icon.jpg" alt="Same" class="option-icon" />
           <span>Same</span>
         </button>
       </div>
@@ -832,15 +832,15 @@ function showPitchResponseScreen(correctAnswer, callback, videoFile, trialNumber
       <h1 style="color: #4b2e83; margin-top: 10px;">How did the pitch sound?</h1>
       <div class="response-options">
         <button class="tempo-btn" data-choice="high">
-          <img src="high_icon.png" alt="High" class="option-icon" />
+          <img src="high_icon.jpg" alt="High" class="option-icon" />
           <span>High</span>
         </button>
         <button class="tempo-btn" data-choice="low">
-          <img src="low_icon.png" alt="Low" class="option-icon" />
+          <img src="low_icon.jpg" alt="Low" class="option-icon" />
           <span>Low</span>
         </button>
         <button class="tempo-btn" data-choice="same">
-          <img src="same_icon.png" alt="Same" class="option-icon" />
+          <img src="same_icon.jpg" alt="Same" class="option-icon" />
           <span>Same</span>
         </button>
       </div>
@@ -1457,6 +1457,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
