--- a/index.html
+++ b/index.html
@@ -817,8 +817,10 @@ function showLowText() {
 function runPitchPractice() {
   const pitchPracticeTrials = [
     { video: "PT_HIGH2.mp4", correct: "high" },
-    { video: "PT_LOW2.mp4", correct: "low" }
+    { video: "PT_LOW2.mp4", correct: "low" },
+    { video: "PT_Same.mp4", correct: "same" }
   ];
+  
   let i = 0;
   let practiceTrialNum = 1;
 
@@ -1496,6 +1498,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
