--- a/index.html
+++ b/index.html
@@ -73,18 +73,23 @@
       padding: 16px;
     }
 
-    .btn-primary{
-      padding: clamp(12px, 2vh, 20px) clamp(20px, 5vw, 48px);
-      font-size: clamp(1rem, 2.5vw, 1.5rem);
-      border-radius:12px; border:none;
-      background:linear-gradient(135deg,#f3e7ff,#d0b3ff);
-      color:#4b2e83; font-weight:bold;
-      cursor:pointer;
-      box-shadow:0 4px 12px rgba(75,46,131,.3);
-      transition:transform .2s, box-shadow .2s;
-    }
-    .btn-primary:hover{transform:scale(1.05); box-shadow:0 6px 18px rgba(75,46,131,.4);}
-
+   .btn-primary{
+  padding: clamp(24px, 5vw, 48px) clamp(40px, 10vw, 96px);
+  font-size: clamp(1.5rem, 4vw, 2.5rem);
+  border-radius: 24px;
+  border: none;
+  background: linear-gradient(135deg,#f3e7ff,#d0b3ff);
+  color: #4b2e83;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 4px 18px rgba(75,46,131,.3);
+  transition: transform .2s, box-shadow .2s;
+}
+.btn-primary:hover{
+  transform: scale(1.07);
+  box-shadow: 0 8px 24px rgba(75,46,131,.4);
+}
+    
 .response-wrapper {
     width: 100%;
     height: 100%;
@@ -379,8 +384,8 @@ window.onload = async () => {
 
     AudioEngine.setGroupGain("video", 5.0); 
     AudioEngine.setGroupGain("music", 3.0);
-    AudioEngine.setGroupGain("narration", 0.6);
-    AudioEngine.setGroupGain("sfx", 0.6);
+    AudioEngine.setGroupGain("narration", 0.8);
+    AudioEngine.setGroupGain("sfx", 0.8);
   };
   window.addEventListener("click", prime, { once: true });
   window.addEventListener("touchend", prime, { once: true });
@@ -829,23 +834,23 @@ function showLowText() {
     video.onended = showFinalText;
   }
 
-  function showFinalText() {
+function showFinalText() {
   updateScreen(`
     <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
       <p style="font-size:1.5em;line-height:1.6;max-width:800px;text-align:center;">
         Now, it’s your turn! After each round, choose whether the music got higher, lower or stayed the same.
       </p>
       <audio id="finalNarration" src="PT_PITCH_FINAL.mp3"></audio>
-      <button id="startPitchPractice" class="btn-primary" style="margin-top:20px;">Start Practice</button>
     </div>
   `);
 
   const audio = document.getElementById("finalNarration");
   if (audio) {
     audio.play().catch(() => {});
+    audio.onended = runPitchPractice;
+  } else {
+    runPitchPractice();
   }
-
-  document.getElementById("startPitchPractice").addEventListener("click", runPitchPractice);
 }
   
 function runPitchPractice() {
@@ -1011,7 +1016,7 @@ function showPitchInstructions() {
         <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
           I need your help! This time, when I get in the elevator you will stay outside. When the door closes,  you won’t hear the song anymore even though it will keep playing in the elevator for me. Keep singing the song in your head so that when the elevator gets to the next floor and the doors open up, you can tell me if I was in the normal elevator or the magical one. <br><br>
 If the music stayed the same, that was a normal elevator.<br>
-But if the pitch of the music changed, then Melody must have ridden the magical elevator! <br>
+But if the pitch of the music changed, then I must have ridden the magical elevator! <br>
 So listen carefully, and keep the music playing in your head.<br>
 Then, choose which elevator I rode: the normal one, or the magical one!<br>
  Are you ready?<br>
@@ -1558,6 +1563,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
