--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ function showNarrationScreen() {
         <img src="Melody.png" alt="Melody character" style="max-height:80vh;max-width:90%;border-radius:20px;" />
       </div>
 <div style="flex:1;text-align:center;padding:30px;">
-        <button id="playNarration" class="btn-primary" style="margin-bottom:24px;font-size:1em;">Click to Play</button>
+<button id="playNarration" class="btn-primary" style="margin-bottom:24px;">Click to Play</button>
         <p style="font-size:1.3em;line-height:1.8;">
          The magical elevator can do all sorts of silly things to the music!<br>
           Sometimes it makes the music go faster or slower.<br>
@@ -1382,7 +1382,7 @@ function showAnimalScreen(callback) {
 
   const btn = document.getElementById("continueAnimal");
   const countdownEl = document.getElementById("animalCountdown");
-  let secondsLeft = 30;
+  let secondsLeft = 20;
   btn.disabled = true;
 
   // Countdown timer
@@ -1563,6 +1563,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
