--- a/index.html
+++ b/index.html
@@ -1411,8 +1411,8 @@ function showAnimalScreen(callback) {
   }, { once: true });
 }
   
-function showParty({ onDone } = {}) {
-  // ---- quick CSS (animations + grid) ----
+function showParty({ onDone, autoStart = false } = {}) {
+  // ---- quick CSS (animations + grid) ----␊
   const css = `
   #party-wrap {height:100%;display:flex;flex-direction:column;align-items:center;justify-content:center;background:#fff;gap:18px;padding:20px; position:relative; overflow:hidden;}
   #animal-grid {display:grid;grid-template-columns:repeat(auto-fit,minmax(110px,1fr));gap:16px;max-width:900px;width:100%;}
@@ -1469,17 +1469,40 @@ function showParty({ onDone } = {}) {
   const startBtn = document.getElementById('startParty');
   const contBtn = document.getElementById('continueBtn');
 
-  startBtn.addEventListener('click', async () => {
+  const canvas = document.getElementById('confetti');
+  const ctx = canvas?.getContext('2d');
+  const sprites = [];
+  const transientSprites = [];
+
+  async function runPartySequence() {
+    if (!startBtn || startBtn.disabled) return;
+
     startBtn.disabled = true;
 
-    // small sequence: cheer ➜ confetti burst ➜ bgm + narration
-    burstConfetti(600); // 600 ms burst
-    try { cheer.currentTime = 0; await cheer.play(); } catch {}
-    setTimeout(async () => {
-      try { bgm.currentTime = 0; await bgm.play(); } catch {}
-      try { outro.currentTime = 0; await outro.play(); } catch {}
+    burstConfetti(600);
+
+    try {
+      cheer.currentTime = 0;
+      await cheer.play();
+    } catch (err) {
+      // Browser blocked autoplay (likely no user gesture). Allow manual retry.
+      startBtn.disabled = false;
+      throw err;
+    }
+
+    setTimeout(() => {
+      try { bgm.currentTime = 0; bgm.play(); } catch {}
+      try { outro.currentTime = 0; outro.play(); } catch {}
     }, 200);
+  }
+
+  startBtn?.addEventListener('click', () => {
+    runPartySequence().catch(() => {});
   });
+
+  if (autoStart) {
+    runPartySequence().catch(() => {});
+  }
 
   contBtn?.addEventListener('click', () => {
     try { bgm.pause(); } catch {}
@@ -1489,8 +1512,9 @@ function showParty({ onDone } = {}) {
   // pause music if user leaves this screen
   addScreenCleanup(() => { try { bgm.pause(); } catch {} });
 
-  // ---- simple confetti (emoji rain on canvas) ----
-  startConfettiLoop();
+  if (canvas && ctx) {
+    startConfettiLoop();
+  }
 
   function injectStyleOnce(id, cssText){
     if (!document.getElementById(id)) {
@@ -1499,7 +1523,8 @@ function showParty({ onDone } = {}) {
   }
 
   function burstConfetti(durationMs=800){
-    const t0 = performance.now();
+    if (!canvas || !ctx) return;
+
     const bursts = [];
     for (let i=0;i<40;i++){
       bursts.push({
@@ -1509,22 +1534,19 @@ function showParty({ onDone } = {}) {
       });
     }
     transientSprites.push(...bursts);
-    setTimeout(()=>{ // remove after life
+    setTimeout(()=>{
       transientSprites.splice(0, bursts.length);
     }, durationMs);
   }
 
-  // confetti engine (very lightweight)
-  const canvas = document.getElementById('confetti');
-  const ctx = canvas.getContext('2d');
-  const sprites = [];         // continuous sprinkle
-  const transientSprites = []; // bursts
-
   function startConfettiLoop(){
-    const resize = () => { canvas.width = canvas.clientWidth; canvas.height = canvas.clientHeight; };
-    resize(); new ResizeObserver(resize).observe(canvas);
+    const resize = () => {
+      canvas.width = canvas.clientWidth;
+      canvas.height = canvas.clientHeight;
+    };
+    resize();
+    new ResizeObserver(resize).observe(canvas);
 
-    // make gentle stream
     for (let i=0;i<50;i++){
       sprites.push({
         x: Math.random(), y: Math.random(), vy: 0.001 + Math.random()*0.002,
@@ -1563,6 +1585,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
